--- a/gb/25/12/4/n14648474.md
+++ b/gb/25/12/4/n14648474.md
@@ -1,19 +1,21 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>孙雯胡骁案（11）：孙雯主动请示中领馆贺词要点</h2>
+<tr><td VALIGN=TOP width="626"><h2 align=center>孙雯胡骁案(11)：孙雯请示中领馆贺词要点</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2025/12/id14648475-187849-600x400.jpg" />
-<h6>2018年6月26日，孙雯安排河南省代表团张富印（左三）等人在曼哈顿与纽约州长霍楚（左四）会面。（纽约东区联邦检察官办公室）</h6>
+<h6>2018年6月26日，孙雯安排河南省代表团张富印（左三）等人在曼哈顿与时任纽约副州长霍楚（左四）会面。（纽约东区联邦检察官办公室）</h6>
 <hr>
-	<p>【大纪元2025年12月04日讯】（大纪元记者蔡溶纽约报导）纽约州长霍楚前副幕僚长孙雯及其丈夫胡骁被控非法充当外国代理人、收受回扣及洗钱，案件于12月3日进入审理第11天。检方当日呈堂更多孙雯与纽约中领馆官员的通讯记录，显示孙雯疑似利用州政府职权，为中共官方提供影响纽约州决策与处理访问、签证事务的“快速通道”，涉入范围涵盖政治、官员行程、行政文件到社区活动。</p>
+	<p>【大纪元2025年12月04日讯】（大纪元记者蔡溶纽约报导）纽约州长霍楚前副幕僚长孙雯及其丈夫胡骁被控非法充当外国代理人、收受回扣及洗钱，案件于12月3日进入审理第11天。</p>
+<p>检方当日呈堂更多孙雯与纽约中领馆官员的通讯记录，显示孙雯疑似利用州政府职权，为中共官方提供影响纽约州决策与处理访问、签证事务的“快速通道”，涉入范围涵盖政治、官员行程、行政文件到社区活动。</p>
 <h2>一、自称能“控制霍楚行程”</h2>
 <p>呈堂记录显示，孙雯与中领馆官员往来频密，且多次主动协助塑造州政府对中方有利的政治表述。</p>
-<p>2019年1月，副领事李丽华询问总领事拜会纽约州府行程时，孙雯回复她能“控制副州长霍楚的行程”。2020年2月，领事钱进称“州长库默也说我们很成功”，孙雯回复：“是我指导州长（库默）该说什么。”</p>
+<p>2019年1月，中领馆副领事李丽华询问总领事拜会纽约州府行程时，孙雯回复她能“控制副州长霍楚的行程”。2020年2月，领事钱进称“州长库默也说我们很成功”，孙雯回复：“是我指导州长（库默）该说什么。”</p>
 <p>2021年1月，李丽华询问孙雯，时任州长库默是否能为中领馆录制新年贺词，孙雯回复霍楚可能可以，并主动向中领馆索要“希望加入的要点”，并协助修改内容；录制影片最终未提及新疆议题，与中领馆要求一致。</p>
-<p>1月25日，孙雯将霍楚录制的贺岁影片传给黄屏，并表示霍楚“比库默更听话”。</p>
-<p>孙雯并补充说，霍楚的演讲撰稿人坚持要提及中国“维吾尔问题”，她回复黄屏“我绝不能让她提到这个”。霍楚2021年贺岁讲话随后由中领馆对外发布，确未提及新疆人权议题，显示孙雯协助内容最终落地。</p>
+<p>1月25日，孙雯将霍楚录制的贺岁影片传给时任纽约总领事黄屏，并表示霍楚“比库默更听话”。</p>
+<figure id="attachment_14649047" aria-describedby="caption-attachment-14649047" style="width: 2508px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/12/id14649047-Screen-Shot-2025-12-04-at-1.02.34-PM.png"><img decoding="async" class="size-full wp-image-14649047" src="https://i.epochtimes.com/assets/uploads/2025/12/id14649047-Screen-Shot-2025-12-04-at-1.02.34-PM.png" alt="孙雯对中领馆总领事黄屏说：霍楚“比库默更听话”。（纽约东区联邦检察官办公室）" width="2508" b="1406" /></a><figcaption id="caption-attachment-14649047" class="wp-caption-text">孙雯对中领馆总领事黄屏说：副州长霍楚“比州长（库默）更听话”。（纽约东区联邦检察官办公室）</figcaption></figure>
+<p>孙雯并补充说，霍楚的演讲撰稿人坚持要提及中国“维吾尔问题”，她回复黄屏“我绝不能让她提到这个”。霍楚2021年贺岁讲话随后由中领馆对外发布，确实未提及新疆人权议题，显示孙雯协助内容最终落地。</p>
 <h2>二、私下为中领馆颁发州长褒奖状</h2>
-<p>2023年1月，已转任劳工厅的孙雯在中领馆要求下，仍私下指示州长行政办公室制作褒奖状，用于华人社区活动颁给黄屏；此褒奖状未经正常程序，不在系统中留记录，且孙雯事后向员工赠送礼品篮与葡萄酒。</p>
+<p>2023年1月，已转任劳工厅的孙雯在中领馆要求下，仍私下指示州长行政办公室制作褒奖状，用于华人社区活动颁给黄屏；此褒奖状未经正常程序，不在系统中留纪录，且孙雯事后向员工赠送礼品篮与葡萄酒。</p>
 <p>2月，她被监察长办公室调查时，声称仅以个人身份参与活动，但后承认她以“劳工厅副厅长”身份站台并致词，且照片刊载于纽约中领馆官网。</p>
 <p>她于2023年3月2日被劳工厅解雇。</p>
 <h2>三、多次为河南官员伪造霍楚签名信</h2>
@@ -25,19 +27,30 @@
 <h2>四、封州政府头衔 助张在统战系统升迁</h2>
 <p>2018年8月，张富印向孙雯索要纽约州头衔，以便向河南省领导层展示政治背书。于是，孙雯私下授予他“亚裔美国人咨询委员”名义，并承诺在州府办公室信头纸上出具证明，同时提醒他“不要让别人知道”。</p>
 <p>张富印与合伙人则讨论，这头衔有助他在统战系统的升迁。</p>
-<p>2018年初，在张富印与施干平安排下，孙雯赴北京参加统战系统主导的全国侨联会议，由施干平安排入住曾接待美国前第一夫人米歇尔·奥巴马的总统套房。中国媒体报导刊出她与中国侨联主席合照。</p>
+<p>2018年初，在张富印与施干平安排下，孙雯赴北京参加统战系统主导的全国侨联会议，由施干平安排入住曾接待美国前第一夫人米歇尔?奥巴马的总统套房。中国媒体报导刊出她与中国侨联主席合照。</p>
 <p>2019年9月，她再次赴北京，行程中包含参加统战部会议与军事阅兵日程的协调。</p>
 <h2>五、长期接受礼物未申报</h2>
 <p>呈堂证据亦显示，孙雯与家人多年从张富印、施干平与中国省级政府获取各类礼物与好处。例如，孙雯与其父母频繁收到同乡会与中领馆赠礼，音乐会门票、活动入场券及各式特产等；而她的手机讯息更显示其长期密集出席各省级官员与涉华商界的饭局——从山东、江苏、江西到北京侨联及布碌崙绿地集团，往来频繁。</p>
 <p>尽管她接受过纽约州府的伦理规范培训，但从未在纽约州政府的财务披露中申报上述利益。当孙雯2021年在长岛与夏威夷“全款”购置高价房产时，其母亲曾担心外界会对资金来源“起疑”，孙雯仅回应以“抵押贷款”作解释。</p>
-<p>责任编辑：陈玟绮</p>
+<h3><strong>前接：</strong></h3>
+<p><ahref=><a href="https://github.com/1992513/djy/blob/master/gb/25/11/13/n14634957.md#1" target="_blank" rel="noopener">孙雯胡骁案(1)：检方指控孙雯暗中替中共行事</a></p>
+<p><ahref=><a href="https://github.com/1992513/djy/blob/master/gb/25/11/14/n14635702.md#1" target="_blank" rel="noopener">孙雯胡骁案(2)：检方指控孙雯伪造州长签名</a></p>
+<p><ahref=><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14637979.md#1" target="_blank" rel="noopener">孙雯胡骁案(3)：查获珠宝现钞 曝中共统战</a></p>
+<p><ahref=><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638724.md#1" target="_blank" rel="noopener">孙雯胡骁案(4)：联名账户与160万美元电汇</a></p>
+<p><ahref=><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639413.md#1" target="_blank" rel="noopener">孙雯胡骁案(5)：七位数资金流向海景公寓</a></p>
+<p><ahref=><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640116.md#1" target="_blank" rel="noopener">孙雯胡骁案(6)：通报中领馆 操控纽约州采购</a></p>
+<p><ahref=><a href="https://github.com/1992513/djy/blob/master/gb/25/11/25/n14642603.md#1" target="_blank" rel="noopener">孙雯胡骁案(7)：阻台湾代表与纽约州府互动</a></p>
+<p><ahref=><a href="https://github.com/1992513/djy/blob/master/gb/25/11/26/n14643278.md#1">孙雯胡骁案(8)：报税数字与奢华生活脱节</a></p>
+<p><ahref=><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647025.md#1" target="_blank" rel="noopener">孙雯胡骁案(9)：政治与商业交缠</a></p>
+<p><ahref=><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14647843.md#1">孙雯胡骁案(10)：检辩激战“中国汇款”疑点</a></p>
+<p>责任编辑：陈玟绮#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652240.md#1">纽约市一房租金涨幅全美第一 五年大涨854美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652271.md#1">长岛铁路和北方铁路新型售票机上线</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652265.md#1">康尼岛木板路将进行百年来首次全面重建</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652238.md#1">纳苏县长布莱克曼宣布参选纽约州长</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/3/7/n11922778.md?dfh#1" target="_blank">了解法轮功：见证奇迹 解开生命奥秘</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/24/n10929549.md#1" target="_blank">传奇总统里根（4）：福利改革 全美效仿</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/2/8/n11032583.md#1" target="_blank">拥有幸福健康 澳洲民众感恩法轮功师父</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/6/n10695964.md#1" target="_blank">林辉：五四运动“第一烈士”是历史的赝品</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/4/10/n7538390.md#1" target="_blank">晚期食道癌患者：法轮功救了我的命</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
@@ -60,5 +73,5 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/12/4/n14648474.htm">孙雯胡骁案（11）：孙雯主动请示中领馆贺词要点</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/12/4/n14648474.htm">孙雯胡骁案(11)：孙雯请示中领馆贺词要点</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648474.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
